src/scss/components/_footer.scss
@use '../abstract/variables' as *;
@use '../abstract/mixins' as *;

picture:has(.footer-border) {
  img {
    width: 100%;
    object-fit: cover;
    object-position: bottom right;
    aspect-ratio: 71/87;
    margin-block-end: -1px;

    @include screen(404px) {
      aspect-ratio: 71/55;
    }
    @include screen(sm) {
      aspect-ratio: 71/25;
    }
    @include screen(lg) {
      object-fit: contain;
      aspect-ratio: auto;
    }
  }
}

.footer {
  position: relative;
  max-width: 100vw;
  padding-block-start: 3rem;
  padding-inline: 1rem;
  // padding-block-end: 3rem;
  margin-block-end: -3rem;

  @include screen(lg) {
    padding-block-end: 3rem;
  }
  @include screen(xl) {
    padding-block-start: 6rem;
  }

  .home & {
    padding-block-start: 0;
  }

  &__breadcrumbs {
    line-height: 1.7;

    @include screen(lg) {
      line-height: 1;
      display: flex;
      gap: 0.5ch;
    }
  }

  &__breadcrumb {
    font-size: 1.25rem;
    position: relative;
    display: flex;
    gap: 0.5ch;
    padding-inline-start: 1.5ch;
    text-decoration: none;
    width: fit-content;

    @include screen(lg) {
      font-size: 1rem;
    }

    &--title {
      font-style: italic;
    }

    &::before {
      font-style: normal;
      position: absolute;
      left: 0;
      content: '⮡';
      text-decoration: none;

      @include screen(lg) {
        content: '→';
      }
    }

    &::after {
      position: absolute;
      bottom: 5px;
      left: 1.5ch;
      width: calc(100% - 1.5ch);
      height: 1px;
      content: '';
      transition: transform 0.2s $ease-out-editorial;
      transform: scaleX(0);
      transform-origin: 0 0;
      background-color: currentColor;
      @include screen(lg) {
        bottom: -1px;
      }
      @media (prefers-reduced-motion: reduce) {
        transition-duration: 0s;
      }
    }

    @for $nth from 2 through 5 {
      &:nth-child(#{$nth}) {
        margin-inline-start: #{($nth - 1) * 1ch};

        @include screen(lg) {
          margin-inline-start: 0;
        }
      }
    }

    &:first-child {
      @include screen(lg) {
        padding-inline-start: 0;
      }

      &::before {
        content: '→';

        @include screen(lg) {
          content: unset;
        }
      }

      &::after {
        @include screen(lg) {
          left: 0;
          width: 100%;
        }
      }
    }

    &:hover {
      &::after {
        transform: scaleX(1);
      }
    }
    @media (prefers-reduced-motion: reduce) {
      &::after {
        transition-duration: 0s;
      }
    }
  }

  &__nav {
    @include screen(lg) {
      display: grid;
      grid-auto-flow: dense;
      grid-column-gap: 1rem;
      row-gap: 2rem;
      grid-template-columns: repeat(2, minmax(0, 1fr));
      margin-block-end: 4rem;
    }
    @include screen(xl) {
      grid-template-columns: repeat(12, minmax(0, 1fr));
      margin-block-end: 7rem;
    }
  }

  &__section {
    margin-block-end: 1.5rem;

    @include screen(lg) {
      margin-block-end: 0;
    }
    @include screen(xl) {
      grid-column-end: span 2;
      grid-row: 2;
    }

    &--garden,
    &--meta {
      @include screen(xl) {
        grid-column-end: span 4;
      }
    }

    &--meta {
      @include screen(xl) {
        grid-column-start: 3;
        grid-row: 3;
      }
    }

    &--collapsed {
      display: none;
    }

    &--breadcrumb {
      margin-block-end: 4rem;

      @include screen(lg) {
        grid-column: 1 / -1;
        grid-row: 1;
        grid-row-end: 1;
        margin-block-end: 0;
      }
    }

    &--social {
      margin-block-end: 2rem;

      @include screen(lg) {
        grid-column: 2;
        grid-row-end: span 2;
        grid-row-start: 2;
      }
      @include screen(xl) {
        grid-column-start: auto;
        grid-column-end: span 2;
        grid-row-end: span 2;
        grid-row-start: 2;
      }
    }
  }

  &__meta-title {
    font-weight: 400;
    line-height: 1.2;
    margin-block-end: 0.5rem;
    letter-spacing: -0.01em;
    text-transform: uppercase;
    color: #b3b3b3;
  }

  &__link {
    font-size: 1.25rem;
    line-height: 1.2;
    position: relative;
    display: inline-block;
    margin-inline-end: 0.5ch;
    padding-block: 0.25rem;
    text-decoration: none;
    letter-spacing: -0.01em;

    @include screen(lg) {
      font-size: 1rem;
    }

    &::after {
      position: absolute;
      bottom: 0.3em;
      left: 0;
      width: 100%;
      height: 1px;
      content: '';
      transition: transform 0.2s $ease-out-editorial;
      transform: scaleX(0);
      transform-origin: 0 0;
      background-color: currentColor;

      @media (prefers-reduced-motion: reduce) {
        transition-duration: 0s;
      }
    }

    &:hover {
      &::after {
        transform: scaleX(1);
      }
    }
  }

  &__link-description {
    font-size: 0.75rem;
    line-height: 1.2;
    letter-spacing: -0.01em;
    color: #a9a9a9;
  }

  &__colophon {
    font-family: $font-serif;
    line-height: 1.3;
    margin-block-end: 3rem;
    letter-spacing: -0.01em;
    color: $color-text-mid;

    @include screen(lg) {
      display: grid;
      grid-auto-flow: column;
      justify-content: space-between;
      margin-block-end: 0;
    }

    span {
      display: block;
    }
  }

  &__graphic {
    overflow: hidden;
    max-height: calc(25rem / 2);
    aspect-ratio: 2 / 1;
    margin-inline: auto;

    @include screen(lg) {
      position: absolute;
      top: 50%;
      right: 0;
      width: 200px;
      max-height: calc(100% - 5rem);
      aspect-ratio: 1 / 2;
      transform: translateY(-50%);
    }
    @include screen(xl) {
      height: calc(100% - 9rem);
      max-height: 25rem;
    }

    svg {
      @include screen(lg) {
        width: 200%;
        height: 100%;
        object-fit: cover;
      }
    }
  }
}

